--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: SACRED BREATH ALCHEMY
+title: Flavors of Alchemy
 description: Discover transformative breathwork, sound healing, and meditation practices designed to nurture self-awareness, inner peace, and personal growth. Explore in-person and online sessions that empower you to align with your true self through ancient traditions and modern techniques.
 author: Sacred Breath Alchemy
 
