business content update

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 title: FLAVORS OF ALCHEMY
 description: Discover transformative breathwork, sound healing, and meditation practices designed to nurture self-awareness, inner peace, and personal growth. Explore in-person and online sessions that empower you to align with your true self through ancient traditions and modern techniques.
-author: Sacred Breath Alchemy
+author: Flavors of Alchemy
 
 layout: app
 path: home
@@ -11,7 +11,7 @@ path: home
   <!-- <h1 class="h1">
     <span class="alchemy-symbol gold">🝖</span>
     <span class="word-split">
-      Alchemize your inner truth through breath and sound
+      Craft your culinary journey through taste and quality
     </span>
     <span class="alchemy-symbol pink">🜹</span>
   </h1> -->
@@ -23,31 +23,31 @@ path: home
       <span class="hero-h1__line hero-h1__line-1">
         <span class="hero-h1__line-inner hero-h1__line-inner-1">
           <span class="alchemy-symbol gold">🝖</span>
-          <span class="hero-h1__word">Alchemize</span>
+          <span class="hero-h1__word">Craft</span>
           <span class="hero-h1__word">your</span>
-          <span class="hero-h1__word">inner&nbsp;</span>
+          <span class="hero-h1__word">culinary&nbsp;</span>
           <br />
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-1">
           <span class="alchemy-symbol gold">🝖</span>
-          <span class="hero-h1__word">Alchemize</span>
+          <span class="hero-h1__word">Craft</span>
           <span class="hero-h1__word">your</span>
-          <span class="hero-h1__word">inner&nbsp;</span>
+          <span class="hero-h1__word">culinary&nbsp;</span>
           <br />
         </span>
       </span>
 
       <span class="hero-h1__line hero-h1__line-2">
         <span class="hero-h1__line-inner hero-h1__line-inner-2">
-          <span class="hero-h1__word">truth</span>
+          <span class="hero-h1__word">journey</span>
           <span class="hero-h1__word">through</span>
-          <span class="hero-h1__word text-stroke">breath </span>
+          <span class="hero-h1__word text-stroke">taste </span>
           <br />
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-2">
-          <span class="hero-h1__word">truth</span>
+          <span class="hero-h1__word">journey</span>
           <span class="hero-h1__word">through</span>
-          <span class="hero-h1__word text-stroke">breath </span>
+          <span class="hero-h1__word text-stroke">taste </span>
           <br />
         </span>
       </span>
@@ -55,12 +55,12 @@ path: home
       <span class="hero-h1__line hero-h1__line-3">
         <span class="hero-h1__line-inner hero-h1__line-inner-3">
           <span class="hero-h1__word">and</span>
-          <span class="hero-h1__word text-stroke">sound </span>
+          <span class="hero-h1__word text-stroke">quality </span>
           <span class="alchemy-symbol pink">🜹</span>
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-3">
           <span class="hero-h1__word">and</span>
-          <span class="hero-h1__word text-stroke">sound </span>
+          <span class="hero-h1__word text-stroke">quality </span>
           <span class="alchemy-symbol pink">🜹</span>
         </span>
       </span>
@@ -70,38 +70,38 @@ path: home
       <span class="hero-h1__line hero-h1__line-1b">
         <span class="hero-h1__line-inner hero-h1__line-inner-1b">
           <span class="alchemy-symbol gold">🝖</span>
-          <span class="hero-h1__word">Alchemize</span>
+          <span class="hero-h1__word">Craft</span>
+          <span class="hero-h1__word">your</span>
           <br />
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-1b">
           <span class="alchemy-symbol gold">🝖</span>
-          <span class="hero-h1__word">Alchemize</span>
+          <span class="hero-h1__word">Craft</span>
+          <span class="hero-h1__word">your</span>
           <br />
         </span>
       </span>
 
       <span class="hero-h1__line hero-h1__line-2b">
         <span class="hero-h1__line-inner hero-h1__line-inner-2b">
-          <span class="hero-h1__word">your</span>
-          <span class="hero-h1__word">inner</span>
-          <span class="hero-h1__word">truth</span>
+          <span class="hero-h1__word">culinary</span>
+          <span class="hero-h1__word">journey</span>
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-2b">
-          <span class="hero-h1__word">your</span>
-          <span class="hero-h1__word">inner</span>
-          <span class="hero-h1__word">truth</span>
+          <span class="hero-h1__word">culinary</span>
+          <span class="hero-h1__word">journey</span>
         </span>
       </span>
 
       <span class="hero-h1__line hero-h1__line-3b">
         <span class="hero-h1__line-inner hero-h1__line-inner-3b">
           <span class="hero-h1__word">through</span>
-          <span class="hero-h1__word text-stroke">breath </span>
+          <span class="hero-h1__word text-stroke">taste </span>
           <br />
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-3b">
           <span class="hero-h1__word">through</span>
-          <span class="hero-h1__word text-stroke">breath </span>
+          <span class="hero-h1__word text-stroke">taste </span>
           <br />
         </span>
       </span>
@@ -109,12 +109,12 @@ path: home
       <span class="hero-h1__line hero-h1__line-4b">
         <span class="hero-h1__line-inner hero-h1__line-inner-4b">
           <span class="hero-h1__word">and</span>
-          <span class="hero-h1__word text-stroke">sound </span>
+          <span class="hero-h1__word text-stroke">quality </span>
           <span class="alchemy-symbol pink">🜹</span>
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-4b">
           <span class="hero-h1__word">and</span>
-          <span class="hero-h1__word text-stroke">sound </span>
+          <span class="hero-h1__word text-stroke">quality </span>
           <span class="alchemy-symbol pink">🜹</span>
         </span>
       </span>
@@ -232,36 +232,36 @@ path: home
       <span class="footer-h2__line footer-h2__line-1">
         <span class="footer-h2__line-inner footer-h2__line-inner-1">
           <span class="alchemy-symbol gold">🝔</span>
-          Transform and align
+          Elevate your culinary
           <br />
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-1">
           <span class="alchemy-symbol gold">🝔</span>
-          Transform and align
+          Elevate your culinary
           <br />
         </span>
       </span>
 
       <span class="footer-h2__line footer-h2__line-2">
         <span class="footer-h2__line-inner footer-h2__line-inner-2">
-          yourself through
-          <span class="footer-h2__word text-stroke">breath </span>
+          journey through
+          <span class="footer-h2__word text-stroke">taste </span>
           <br />
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-2">
-          yourself through
-          <span class="footer-h2__word text-stroke">breath </span>
+          journey through
+          <span class="footer-h2__word text-stroke">taste </span>
           <br />
         </span>
       </span>
 
       <span class="footer-h2__line footer-h2__line-3">
         <span class="footer-h2__line-inner footer-h2__line-inner-3">
-          and <span class="text-stroke">sound </span>
+          and <span class="text-stroke">quality </span>
           <span class="alchemy-symbol pink">🝡</span>
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-3">
-          and <span class="text-stroke">sound </span>
+          and <span class="text-stroke">quality </span>
           <span class="alchemy-symbol pink">🝡</span>
         </span>
       </span>
@@ -270,38 +270,38 @@ path: home
     <span class="md-screen-and-below" aria-hidden="true">
       <span class="footer-h2__line footer-h2__line-1b">
         <span class="footer-h2__line-inner footer-h2__line-inner-1b">
-          <span class="alchemy-symbol gold">🝔</span> Transform
+          <span class="alchemy-symbol gold">🝔</span> Elevate your
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-1b">
-          <span class="alchemy-symbol gold">🝔</span> Transform
+          <span class="alchemy-symbol gold">🝔</span> Elevate your
         </span>
       </span>
 
       <span class="footer-h2__line footer-h2__line-2b">
         <span class="footer-h2__line-inner footer-h2__line-inner-2b">
-          and align yourself
+          culinary journey
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-2b">
-          and align yourself
+          culinary journey
         </span>
       </span>
 
       <span class="footer-h2__line footer-h2__line-3b">
         <span class="footer-h2__line-inner footer-h2__line-inner-3b">
-          through <span class="footer-h2__word text-stroke">breath </span>
+          through <span class="footer-h2__word text-stroke">taste </span>
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-3b">
-          through <span class="footer-h2__word text-stroke">breath </span>
+          through <span class="footer-h2__word text-stroke">taste </span>
         </span>
       </span>
 
       <span class="footer-h2__line footer-h2__line-4b">
         <span class="footer-h2__line-inner footer-h2__line-inner-4b">
-          and <span class="text-stroke">sound </span>
+          and <span class="text-stroke">quality </span>
           <span class="alchemy-symbol pink">🝡</span>
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-4b">
-          and <span class="text-stroke">sound </span>
+          and <span class="text-stroke">quality </span>
           <span class="alchemy-symbol pink">🝡</span>
         </span>
       </span>
