--- a/src/404.html
+++ b/src/404.html
@@ -1,7 +1,7 @@
 ---
 title: 404 | Page not found
 description: The page you are looking for cannot be found. Please check the URL or return to the homepage.
-author: Sacred Breath Alchemy
+author: Flavors of Alchemy
 layout: app
 path: 404
 ---
