data, meta and alt updates to match brand

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: FLAVORS OF ALCHEMY
-description: Discover transformative breathwork, sound healing, and meditation practices designed to nurture self-awareness, inner peace, and personal growth. Explore in-person and online sessions that empower you to align with your true self through ancient traditions and modern techniques.
+description:Discover the art of vegan cooking with [Your Business Name]. Our website offers a range of services designed to elevate your culinary journey, from hands-on food preparation courses to comprehensive whole food education and expert utensil maintenance workshops. Whether you're new to plant-based living or a seasoned cook, our team of culinary experts provides the tools, knowledge, and support you need to create delicious, nourishing meals. Explore our classes, shop our gourmet products, and join a community dedicated to quality, taste, and sustainable living.
 author: Flavors of Alchemy
 
 layout: app
@@ -17,7 +17,7 @@ path: home
   </h1> -->
   <h1
     class="h1"
-    aria-label="Alchemize your inner truth through breath and sound"
+    aria-label="Craft your culinary journey through taste and quality"
   >
     <span class="md-screen-and-up" aria-hidden="true">
       <span class="hero-h1__line hero-h1__line-1">
@@ -226,7 +226,7 @@ path: home
 <section id="pre-footer" class="pre-footer">
   <h2
     class="h1"
-    aria-label="Transform and align yourself through breath and sound"
+    aria-label="Elevate your culinary journey through taste and quality"
   >
     <span class="md-screen-and-up" aria-hidden="true">
       <span class="footer-h2__line footer-h2__line-1">
