--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: FLAVORS OF ALCHEMY
+title: ALCHEMY FLAVOR
 description: Discover the art of vegan cooking with [Your Business Name]. Our website offers a range of services designed to elevate your culinary journey, from hands-on food preparation courses to comprehensive whole food education and expert utensil maintenance workshops. Whether you're new to plant-based living or a seasoned cook, our team of culinary experts provides the tools, knowledge, and support you need to create delicious, nourishing meals. Explore our classes, shop our gourmet products, and join a community dedicated to quality, taste, and sustainable living.
 author: Flavors of Alchemy
 
