reusable vars for primary and secondary

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@ path: home
 
 <section class="hero" id="hero">
   <!-- <h1 class="h1">
-    <span class="alchemy-symbol gold">🝖</span>
+    <span class="alchemy-symbol color-primary">🝖</span>
     <span class="word-split">
       Craft your culinary [%br.md-screen-and-up%] journey through taste
       [%br.md-screen-and-up%] and quality
     </span>
-    <span class="alchemy-symbol pink">🜹</span>
+    <span class="alchemy-symbol color-secondary">🜹</span>
   </h1> -->
   <h1
     class="h1"
@@ -23,14 +23,14 @@ path: home
     <span class="md-screen-and-up" aria-hidden="true">
       <span class="hero-h1__line hero-h1__line-1">
         <span class="hero-h1__line-inner hero-h1__line-inner-1">
-          <span class="alchemy-symbol gold">🝖</span>
+          <span class="alchemy-symbol color-primary">🝖</span>
           <span class="hero-h1__word">Craft</span>
           <span class="hero-h1__word">your</span>
           <span class="hero-h1__word">culinary</span>
           <br />
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-1">
-          <span class="alchemy-symbol gold">🝖</span>
+          <span class="alchemy-symbol color-primary">🝖</span>
           <span class="hero-h1__word">Craft</span>
           <span class="hero-h1__word">your</span>
           <span class="hero-h1__word">culinary</span>
@@ -57,12 +57,12 @@ path: home
         <span class="hero-h1__line-inner hero-h1__line-inner-3">
           <span class="hero-h1__word">and</span>
           <span class="hero-h1__word text-stroke">quality</span>
-          <span class="alchemy-symbol pink">🜹</span>
+          <span class="alchemy-symbol color-secondary">🜹</span>
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-3">
           <span class="hero-h1__word">and</span>
           <span class="hero-h1__word text-stroke">quality</span>
-          <span class="alchemy-symbol pink">🜹</span>
+          <span class="alchemy-symbol color-secondary">🜹</span>
         </span>
       </span>
     </span>
@@ -70,13 +70,13 @@ path: home
     <span class="md-screen-and-below" aria-hidden="true">
       <span class="hero-h1__line hero-h1__line-1b">
         <span class="hero-h1__line-inner hero-h1__line-inner-1b">
-          <span class="alchemy-symbol gold">🝖</span>
+          <span class="alchemy-symbol color-primary">🝖</span>
           <span class="hero-h1__word">Craft</span>
           <span class="hero-h1__word">your</span>
           <br />
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-1b">
-          <span class="alchemy-symbol gold">🝖</span>
+          <span class="alchemy-symbol color-primary">🝖</span>
           <span class="hero-h1__word">Craft</span>
           <span class="hero-h1__word">your</span>
           <br />
@@ -111,12 +111,12 @@ path: home
         <span class="hero-h1__line-inner hero-h1__line-inner-4b">
           <span class="hero-h1__word">and</span>
           <span class="hero-h1__word text-stroke">quality</span>
-          <span class="alchemy-symbol pink">🜹</span>
+          <span class="alchemy-symbol color-secondary">🜹</span>
         </span>
         <span class="hero-h1__line-inner hero-h1__line-inner-4b">
           <span class="hero-h1__word">and</span>
           <span class="hero-h1__word text-stroke">quality</span>
-          <span class="alchemy-symbol pink">🜹</span>
+          <span class="alchemy-symbol color-secondary">🜹</span>
         </span>
       </span>
     </span>
@@ -195,7 +195,7 @@ path: home
         <span class="price-current"> {{ card.price }} </span>
       </h4>
 
-      <hr class="gold" aria-hidden="true" />
+      <hr class="color-primary" aria-hidden="true" />
 
       {% if card.benefit_list %}
       <ul class="benefit-list classic-list">
@@ -244,12 +244,12 @@ path: home
     <span class="md-screen-and-up" aria-hidden="true">
       <span class="footer-h2__line footer-h2__line-1">
         <span class="footer-h2__line-inner footer-h2__line-inner-1">
-          <span class="alchemy-symbol gold">🝔</span>
+          <span class="alchemy-symbol color-primary">🝔</span>
           Elevate your culinary
           <br />
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-1">
-          <span class="alchemy-symbol gold">🝔</span>
+          <span class="alchemy-symbol color-primary">🝔</span>
           Elevate your culinary
           <br />
         </span>
@@ -271,11 +271,11 @@ path: home
       <span class="footer-h2__line footer-h2__line-3">
         <span class="footer-h2__line-inner footer-h2__line-inner-3">
           and <span class="text-stroke">quality </span>
-          <span class="alchemy-symbol pink">🝡</span>
+          <span class="alchemy-symbol color-secondary">🝡</span>
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-3">
           and <span class="text-stroke">quality </span>
-          <span class="alchemy-symbol pink">🝡</span>
+          <span class="alchemy-symbol color-secondary">🝡</span>
         </span>
       </span>
     </span>
@@ -283,10 +283,10 @@ path: home
     <span class="md-screen-and-below" aria-hidden="true">
       <span class="footer-h2__line footer-h2__line-1b">
         <span class="footer-h2__line-inner footer-h2__line-inner-1b">
-          <span class="alchemy-symbol gold">🝔</span> Elevate your
+          <span class="alchemy-symbol color-primary">🝔</span> Elevate your
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-1b">
-          <span class="alchemy-symbol gold">🝔</span> Elevate your
+          <span class="alchemy-symbol color-primary">🝔</span> Elevate your
         </span>
       </span>
 
@@ -311,11 +311,11 @@ path: home
       <span class="footer-h2__line footer-h2__line-4b">
         <span class="footer-h2__line-inner footer-h2__line-inner-4b">
           and <span class="text-stroke">quality </span>
-          <span class="alchemy-symbol pink">🝡</span>
+          <span class="alchemy-symbol color-secondary">🝡</span>
         </span>
         <span class="footer-h2__line-inner footer-h2__line-inner-4b">
           and <span class="text-stroke">quality </span>
-          <span class="alchemy-symbol pink">🝡</span>
+          <span class="alchemy-symbol color-secondary">🝡</span>
         </span>
       </span>
     </span>
